recent: Set G_FILE_ATTRIBUTE_RECENT_MODIFED attribute

G_FILE_ATTRIBUTE_TIME_ACCESS is used for sorting currently, however,
it causes troubles, because some daemons (i.e. dropbox) access
files and updates its timestamps itself. This attribute propagates
time when the metadata was last changed, which is what we need for
sorting in client applications.

https://bugzilla.gnome.org/show_bug.cgi?id=777507